--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -106,7 +106,7 @@ if (OPENMP_FOUND)
   add_definitions(-DOPENMP_EXISTS)
   set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
   set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
-  message(STATUS "System is " ${CMAKE_SYSTEM_NAME})
+  message(STATUS "Compiler flags (OMP): " ${CMAKE_CXX_FLAGS})
 endif()
 
 
