Split method initialization into two steps. CMake for TBB.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -114,6 +114,7 @@ endif()
 ##
 ## Intel TBB
 ##
+list(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR})
 find_package(TBB)
 target_link_libraries(sptrsv tbb)
 
